fix: check JavaFX exists before downloading